17375
{code}
scala> val x = """
     | bippy
     | bippy
     | """
x: String = 
"
bippy
bippy
"

scala> val x = s"""
<console>:1: error: unclosed multi-line string literal
       val x = s"""
                ^
{code}
